--- a/index/Micro.html
+++ b/index/Micro.html
@@ -10,10 +10,27 @@
 	<script src="../js/Micro.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../js/public.js"></script>
 	<script type="text/javascript">
-		document.documentElement.style.fontSize = document.documentElement.clientWidth / 320 * 20 + 'px';
-		onresize = function () {
-			document.documentElement.style.fontSize = document.documentElement.clientWidth / 320 * 20 + 'px';
-		};
+		(function (deviceWidth, fontSize) {
+            deviceWidth = deviceWidth || 640;
+            fontSize = fontSize || 100;
+            var metas = document.querySelectorAll('meta');
+            var viewPort = [].slice.call(metas).filter((item) => {
+                return item.name === 'viewport';
+            })[0];
+            if (!viewPort) {
+                var meta = document.createElement('meta');
+                meta.name = 'viewport';
+                viewPort = document.head.insertBefore(meta, metas[metas.length - 1].nextElementSibling);
+            }
+            var scale = 1 / window.devicePixelRatio;
+            viewPort.content = `width=device-width, initial-scale=${scale}, maximum-scale=${scale}, minimum-scale=${scale}, user-scalable=no`;
+            var html = document.documentElement;
+            var fn = function () {
+                html.style.fontSize = (html.clientWidth / deviceWidth) * fontSize + 'px';
+            };
+            fn();
+            window.addEventListener('resize', fn);
+        })(750, 50);
 	</script>
 	<link rel="stylesheet" type="text/css" href="../css/search.css" />
 	<style type="text/css">
