--- a/index/broadcast.html
+++ b/index/broadcast.html
@@ -9,10 +9,27 @@
 	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script>
 	<script type="text/javascript">
-		document.documentElement.style.fontSize = document.documentElement.clientWidth / 320 * 20 + 'px';
-		onresize = function () {
-			document.documentElement.style.fontSize = document.documentElement.clientWidth / 320 * 20 + 'px';
-		};
+		(function (deviceWidth, fontSize) {
+            deviceWidth = deviceWidth || 640;
+            fontSize = fontSize || 100;
+            var metas = document.querySelectorAll('meta');
+            var viewPort = [].slice.call(metas).filter((item) => {
+                return item.name === 'viewport';
+            })[0];
+            if (!viewPort) {
+                var meta = document.createElement('meta');
+                meta.name = 'viewport';
+                viewPort = document.head.insertBefore(meta, metas[metas.length - 1].nextElementSibling);
+            }
+            var scale = 1 / window.devicePixelRatio;
+            viewPort.content = `width=device-width, initial-scale=${scale}, maximum-scale=${scale}, minimum-scale=${scale}, user-scalable=no`;
+            var html = document.documentElement;
+            var fn = function () {
+                html.style.fontSize = (html.clientWidth / deviceWidth) * fontSize + 'px';
+            };
+            fn();
+            window.addEventListener('resize', fn);
+        })(750, 50);
 	</script>
 	<script src="../js/broad.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../js/public.js"></script>
@@ -22,8 +39,7 @@
 	<div class="wrapper">
 		<div class="content">
 			<div class="banner"><img src="../img/tu.jpg"></div>
-			<div class="bro_tit">
-				<img src="../img/vertical.png">课程信息
+			<div class="bro_tit">课程信息
 			</div>
 			<ul class="con">
 				<div class="intr">
@@ -36,9 +52,9 @@
 					</div>
 					<div class="int_foot">
 						<div class="int_zi"><a class="small">¥</a>6-<a class="small">¥</a>218</div>
-						<div class="int_peo">1000人浏览</div>
+						<div class="int_peo">1000人报名</div>
 					</div>
-					<span class="guan">2017-08-23 19：00</span>
+					<span class="guan">08-23 19：00</span>
 				</div>
 				<div class="int_img"><img src="../img/tu.jpg"></div>
 			</ul>
