--- a/index/details.html
+++ b/index/details.html
@@ -53,9 +53,8 @@
 						<div class="int_p">讲师名</div>
 						<div class="int_foot">
 							<div class="int_zi"><a class="small">¥</a>6-<a class="small">¥</a>218</div>
-							<div class="int_peo">1000人浏览</div>
+							<div class="int_peo">1000人学习</div>
 						</div>
-						<span class="guan">关注</span>
 					</div>
 					<div class="int_img"><img src="../img/tu.jpg"></div>
 				</li>
