--- a/index/index.html
+++ b/index/index.html
@@ -45,8 +45,9 @@
 <body>
 	<div class="wrapper">
 		<div class="content">
+			<!-- 直播推荐 -->
 			<div class="banner">
-				<div class="ban_tit">
+				<!-- <div class="ban_tit">
 					本周直播推荐
 				</div>
 				<div class="ban_tu">
@@ -63,89 +64,16 @@
 					<p>
 						<a class="small">¥</a>0</p>
 				</div>
-				<div class="ban_bao">1000人已报名</div>
+				<div class="ban_bao">1000人已报名</div> -->
 			</div>
+
+			<!-- 限时免费公开课 -->
 			<div class="gao">
 				<img src="../img/tu.jpg" />
 			</div>
-			<div class="details clear">
-				<div class="zhi_son">
-					<div class="zhi_tu">
-						<img src="../img/tu.jpg">
-						<span class='huifang'>回放</span>
-					</div>
-					<div class="gao_tit">
-						GRE满分女神答题策略
-					</div>
-					<div class="gao_p">
-						08-23 19:00
-					</div>
-					<div class="gao_xin">
-						<span>套课：5课时</span>
-						<p>
-							<a class="small">¥</a>6-
-							<a class="small">¥</a>128</p>
-					</div>
-					<div class="ban_bao">1000人报名</div>
-				</div>
-				<div class="zhi_son">
-					<div class="zhi_tu">
-						<img src="../img/tu.jpg">
-						<span class='huifang'>回放</span>
-					</div>
-					<div class="gao_tit">
-						GRE满分女神答题策略
-					</div>
-					<div class="gao_p">
-						08-23 19:00
-					</div>
-					<div class="gao_xin">
-						<span>套课：5课时</span>
-						<p>
-							<a class="small">¥</a>6-
-							<a class="small">¥</a>128</p>
-					</div>
-					<div class="ban_bao">1000人已报名</div>
-				</div>
-				<div class="zhi_son">
-					<div class="zhi_tu">
-						<img src="../img/tu.jpg">
-						<span class='huifang'>回放</span>
-					</div>
-					<div class="gao_tit">
-						GRE满分女神答题策略
-					</div>
-					<div class="gao_p">
-						08-23 19:00
-					</div>
-					<div class="gao_xin">
-						<span>套课：5课时</span>
-						<p>
-							<a class="small">¥</a>6-
-							<a class="small">¥</a>128</p>
-					</div>
-					<div class="ban_bao">1000人已报名</div>
-				</div>
-				<div class="zhi_son">
-					<div class="zhi_tu">
-						<img src="../img/tu.jpg">
-						<span class='huifang'>回放</span>
-					</div>
-					<div class="gao_tit">
-						GRE满分女神答题策略
-					</div>
-					<div class="gao_p">
-						08-23 19:00
-					</div>
-					<div class="gao_xin">
-						<span>套课：5课时</span>
-						<p>
-							<a class="small">¥</a>6-
-							<a class="small">¥</a>128</p>
-					</div>
-					<div class="ban_bao">1000人已报名</div>
-				</div>
-			</div>
+
+			<!-- 回放列表 -->
+			<div class="details clear"></div>
 
 		</div>
 		<div class="head">
