--- a/index/signin.html
+++ b/index/signin.html
@@ -6,8 +6,10 @@
 	<meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<title>Softline</title>
 	<link rel="stylesheet" type="text/css" href="../css/signin.css" />
-	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
-	<script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script>
+	<!-- <script src="http://code.jquery.com/jquery-1.8.0.min.js"></script> -->
+	<script src="../js/jquery-1.8.3.min.js"></script>
+	<!-- <script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script> -->
+	<script src="../js/bscroll.min.js"></script>
 	<script type="text/javascript">
 		(function (deviceWidth, fontSize) {
             deviceWidth = deviceWidth || 640;
@@ -44,13 +46,15 @@
 				<div class="msm">短信验证登录</div>
 			</div>
 			<div class="account">
-				<li class="acco_first"><span>账号</span><input type="text" placeholder="请输入手机号" /></li>
-				<li class="acco_last"><span>密码</span><input type="password" placeholder="请输入密码" /></li>
+				<li class="acco_first"><span>账号</span><input type="text" placeholder="请输入手机号"  id='acc_iphone'/></li>
+				<li class="acco_last"><span>密码</span><input type="password" placeholder="请输入密码" id='password'/></li>
 			</div>
 			<div class="msmlogin">
-				<li class="ms_first"><span>账号</span><input type="text" placeholder="请输入手机号" /></li>
+				<li class="ms_first"><span>账号</span><input type="text" placeholder="请输入手机号" id='short_iphone'/></li>
 				<li class="ms_last"><span>短信验证码</span><input type="text" placeholder="请输入验证码" id="code" /><input type="button" value="获取验证码" id="btn" /></li>
 			</div>
+
+			<div class="message"></div>
 			<div class="inpbtn"><input type="button" value="登录" /></div>
 			<div class="sign"><a>立即注册</a></div>
 			<div class="foot">
