--- a/index/our.html
+++ b/index/our.html
@@ -40,7 +40,7 @@
 		<div class="content">
 			<dl class="head" style="display: block;">
 				<dt><img src="../img/tu.jpg"></dt>
-				<dd>点击此处登录/注册</dd>
+				<dd class='userInfo'>点击此处登录/注册</dd>
 			</dl>
 			<div class="header" style="display: none;">
 				<div class="head_con">
@@ -63,6 +63,8 @@
 				<li class="code">兑换码</li>
 				<div class="bor"></div>
 				<li class="follow">我的关注</li>
+				<div class="bor"></div>
+				<li class="collection">我的收藏</li>
 				<div class="borb"></div>
 				<li class="setup">设置</li>
 			</div>
