--- a/index/register.html
+++ b/index/register.html
@@ -41,11 +41,14 @@
 		<div class="content">
 			<div class="head"><img src="../img/logo.png"></div>
 			<div class="msmlogin">
-				<li class="ms_first"><span>账号</span><input type="text" placeholder="请输入手机号" /></li>
+				<li class="ms_first"><span>账号</span><input type="text" placeholder="请输入手机号" id='phone'/></li>
 				<li class="ms_last"><span>短信验证码</span><input type="text" placeholder="请输入验证码" id="code" /><input type="button" value="获取验证码" id="btn" /></li>
-				<li class="ms_first"><span>密码</span><input type="password" placeholder="6-20位数字加字母" /></li>
+				<li class="ms_first"><span>密码</span><input type="password" placeholder="6-20位数字加字母" id="password"/></li>
 			</div>
-			<div class="inpbtn"><input type="button" value="登录" /></div>
+
+			<div class="message"></div>
+			
+			<div class="inpbtn"><input type="button" value="注册" id="register"/></div>
 			<div class="sign"><a>已有账号？立即登录</a></div>
 			<div class="foot">
 				<div class="foot_head">
