注册接口完成

--- a/index/code.html
+++ b/index/code.html
@@ -44,7 +44,7 @@
 					<div class="head_cc">
 						<p>昵称昵称</p>
 						<div class="headc_font">
-							<span>22</span>
+							<span class="follow">22</span>
 							<div class="lines"> </div><a>24天</a>
 						</div>
 					</div>
@@ -52,64 +52,14 @@
 				</div>
 			</div>
 			<div class="code">
-				<div class="code_con">
+				<div class="code_con clear">
 					<input type="text" placeholder="请输入兑换码" class="tex" />
 					<input type="button" value="兑换" class="code_btn" />
 				</div>
+				<div class="message"></div>
 			</div>
 			<div class="conten">
-				<div class="din_con">
-					<div class="dinc_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="dinc_rt">
-						<p>法学院申请专场deadline申请专场d</p>
-						<span>讲师名</span>
-						<div class="dincc">
-							<div class="price">¥0</div>
-							<div class="study">立即学习</div>
-						</div>
-					</div>
-				</div>
-				<div class="din_con">
-					<div class="dinc_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="dinc_rt">
-						<p>法学院申请专场deadline申请专场d</p>
-						<span>讲师名</span>
-						<div class="dincc">
-							<div class="price">¥0</div>
-							<div class="study">立即学习</div>
-						</div>
-					</div>
-				</div>
-				<div class="din_con">
-					<div class="dinc_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="dinc_rt">
-						<p>法学院申请专场deadline申请专场d</p>
-						<span>讲师名</span>
-						<div class="dincc">
-							<div class="price">¥0</div>
-							<div class="study">立即学习</div>
-						</div>
-					</div>
-				</div>
-				<div class="din_con">
-					<div class="dinc_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="dinc_rt">
-						<p>法学院申请专场deadline申请专场d</p>
-						<span>讲师名</span>
-						<div class="dincc">
-							<div class="price">¥0</div>
-							<div class="study">立即学习</div>
-						</div>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
