精品课程首页，列表。。。

--- a/index/boutique.html
+++ b/index/boutique.html
@@ -39,14 +39,14 @@
 	<div class="wrapper">
 		<div class="content">
 			<ul class="head">
-				<li><a class="blue">留学考试</a></li>
-				<li><a>留学申请</a></li>
-				<li><a>职业发展</a></li>
-				<li><a>其他</a></li>
+				<li><a class="blue" typ="4">留学考试</a></li>
+				<li><a typ="5">留学申请</a></li>
+				<li><a typ="7">职业发展</a></li>
+				<li><a typ="6">其他</a></li>
 			</ul>
 			<ul class="con">
 				<li class="Examination" style="display: block;">
-					<div class="recon_box">
+					<!--<div class="recon_box">
 						<div class="box_fl">
 							<img src="../img/tu.jpg">
 						</div>
@@ -59,195 +59,7 @@
 								<dt>1000人浏览</dt>
 							</div>
 						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-				</li>
-				<li class="oversase">
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-				</li>
-				<li class="Development">
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-				</li>
-				<li class="other">
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
-					<div class="recon_box">
-						<div class="box_fl">
-							<img src="../img/tu.jpg">
-						</div>
-						<div class="box_rt">
-							<p>杜克女神带你走进世界银行啦啦啦</p>
-							<span>讲师名</span>
-							<div class="box_fot">
-								<dd>
-									<a class="small">¥</a>6</dd>
-								<dt>1000人浏览</dt>
-							</div>
-						</div>
-					</div>
+					</div>-->
 				</li>
 			</ul>
 		</div>
