--- a/index/details.html
+++ b/index/details.html
@@ -7,7 +7,7 @@
 	<title>Softline</title>
 	<link rel="stylesheet" type="text/css" href="../css/details.css" />
 	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script>
+	<script src="../js/bscroll.min.js"></script>
 	<script type="text/javascript">
 		(function (deviceWidth, fontSize) {
             deviceWidth = deviceWidth || 640;
@@ -59,54 +59,14 @@
 					<div class="int_img"><img src="../img/tu.jpg"></div>
 				</li>
 				<li class="catalog">
-					<div class="cataloga">
+					<!--<div class="cataloga">
 						<div class="cat_tit">第一课：GRE备考整体概述</div>
 						<div class="cat_fot">
 							<a class="cat_time">01:30:00</a>
 							<a class="cat_name">1000+已报名</a>
 						</div>
 						<span><img src="../img/no.png"></span>
-					</div>
-					<div class="cataloga">
-						<div class="cat_tit">第一课：GRE备考整体概述</div>
-						<div class="cat_fot">
-							<a class="cat_time">01:30:00</a>
-							<a class="cat_name">1000+已报名</a>
-						</div>
-						<span><img src="../img/no.png"></span>
-					</div>
-					<div class="cataloga">
-						<div class="cat_tit">第一课：GRE备考整体概述</div>
-						<div class="cat_fot">
-							<a class="cat_time">01:30:00</a>
-							<a class="cat_name">1000+已报名</a>
-						</div>
-						<span><img src="../img/no.png"></span>
-					</div>
-					<div class="cataloga">
-						<div class="cat_tit">第一课：GRE备考整体概述</div>
-						<div class="cat_fot">
-							<a class="cat_time">01:30:00</a>
-							<a class="cat_name">1000+已报名</a>
-						</div>
-						<span><img src="../img/no.png"></span>
-					</div>
-					<div class="cataloga">
-						<div class="cat_tit">第一课：GRE备考整体概述</div>
-						<div class="cat_fot">
-							<a class="cat_time">01:30:00</a>
-							<a class="cat_name">1000+已报名</a>
-						</div>
-						<span><img src="../img/no.png"></span>
-					</div>
-					<div class="cataloga">
-						<div class="cat_tit">第一课：GRE备考整体概述</div>
-						<div class="cat_fot">
-							<a class="cat_time">01:30:00</a>
-							<a class="cat_name">1000+已报名</a>
-						</div>
-						<span><img src="../img/no.png"></span>
-					</div>
+					</div>-->
 				</li>
 				<li class="comment">
 					<div class="pincon">
@@ -114,30 +74,15 @@
 							<textarea placeholder="请输入你对课程的看法" id="huo"></textarea>
 							<input type="button" value="提交评论" id="pin" />
 						</div>
-						<div class="com">
+						<!--<div class="com">
 							<div class="conm_fl"><img src="../img/tu.jpg" /></div>
 							<div class="com_rt">
 								<dd>用户名称</dd>
 								<h3>我对这个很看好我对这个很看好我对这个很看好我对这个很看好我对这个很看好我对这个很看好 </h3>
 								<div class="qi">2017-8-28 19：00</div>
 							</div>
-						</div>
-						<div class="com">
-							<div class="conm_fl"><img src="../img/tu.jpg" /></div>
-							<div class="com_rt">
-								<dd>用户名称</dd>
-								<h3>我对这个很看好我对这个很看好我对这个很看好我对这个很看好我对这个很看好我对这个很看好 </h3>
-								<div class="qi">2017-8-28 19：00</div>
-							</div>
-						</div>
-						<div class="com">
-							<div class="conm_fl"><img src="../img/tu.jpg" /></div>
-							<div class="com_rt">
-								<dd>用户名称</dd>
-								<h3>我对这个很看好我对这个很看好我对这个很看好我对这个很看好我对这个很看好我对这个很看好 </h3>
-								<div class="qi">2017-8-28 19：00</div>
-							</div>
-						</div>
+						</div>-->
+						<div class="cent"></div>
 						<div class="meiyou">还没有评论</div>
 					</div>
 				</li>
