--- a/index/mall.html
+++ b/index/mall.html
@@ -62,38 +62,14 @@
 			</div>
 			<div class="jin">
 				<div class="prese">
-					<div class="pre_con">
+					<!--<div class="pre_con">
 						<div class="pre_igm"><img src="../img/tu.jpg"></div>
 						<p>GRE满分女神答题策略</p>
 						<div>
 							<strong>讲师名</strong>
 							<span><a class="small">¥</a>6</span>
 						</div>
-					</div>
-					<div class="pre_con">
-						<div class="pre_igm"><img src="../img/tu.jpg"></div>
-						<p>GRE满分女神答题策略</p>
-						<div>
-							<strong>讲师名</strong>
-							<span><a class="small">¥</a>6</span>
-						</div>
-					</div>
-					<div class="pre_con">
-						<div class="pre_igm"><img src="../img/tu.jpg"></div>
-						<p>GRE满分女神答题策略</p>
-						<div>
-							<strong>讲师名</strong>
-							<span><a class="small">¥</a>6</span>
-						</div>
-					</div>
-					<div class="pre_con">
-						<div class="pre_igm"><img src="../img/tu.jpg"></div>
-						<p>GRE满分女神答题策略</p>
-						<div>
-							<strong>讲师名</strong>
-							<span><a class="small">¥</a>6</span>
-						</div>
-					</div>
+					</div>-->
 				</div>
 				<div class="look">
 					查看更多<img src="../img/duo.png" />
