限时免费公开课

--- a/index/broadcast.html
+++ b/index/broadcast.html
@@ -37,29 +37,7 @@
 
 <body>
 	<div class="wrapper">
-		<div class="content">
-			<div class="banner"><img src="../img/tu.jpg"></div>
-			<div class="bro_tit">课程信息
-			</div>
-			<ul class="con">
-				<div class="intr">
-					<div class="int_tit">
-						杜克女神带你走进世界银行
-					</div>
-					<div class="int_p">
-						讲师名
-						<span>套课：5课时</span>
-					</div>
-					<div class="int_foot">
-						<div class="int_zi"><a class="small">¥</a>6-<a class="small">¥</a>218</div>
-						<div class="int_peo">1000人报名</div>
-					</div>
-					<span class="guan">08-23 19：00</span>
-				</div>
-				<div class="int_img"><img src="../img/tu.jpg"></div>
-			</ul>
-			<div class="bao">立即报名</div>
-		</div>
+		<div class="content"></div>
 	</div>
 </body>
 
