--- a/index/dindan.html
+++ b/index/dindan.html
@@ -31,8 +31,8 @@
             window.addEventListener('resize', fn);
         })(750, 50);
 	</script>
-	<script src="../js/our.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../js/public.js"></script>
+	<script src='../js/dingdan.js'></script>
 </head>
 
 <body>
