--- a/index/free.html
+++ b/index/free.html
@@ -50,126 +50,13 @@
 			<div class="xianshi">
 				限时免费公开课
 			</div>
-			<div class="recon">
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-				<div class="recon_box">
-					<div class="box_fl">
-						<img src="../img/tu.jpg">
-					</div>
-					<div class="box_rt">
-						<p>杜克女神带你走进世界银行啦啦啦</p>
-						<span>讲师名</span>
-						<div class="box_fot">
-							<dd>
-								<a class="small">¥</a>6</dd>
-							<dt>1000人报名</dt>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div class="recon"></div>
 		</div>
 		<footer>
 				<dl>
 					<a href="index.html">
-						<dt><img src="../img/zhi_act.png"></dt>
-						<dd>直播</dd>
+						<dt><img src="../img/zhi.png"></dt>
+						<dd class='blue'>直播</dd>
 					</a>
 				</dl>
 				<dl>
