--- a/index/our.html
+++ b/index/our.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 	<script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script>
+	<link rel="stylesheet" href="../css/public.css">
 	<link rel="stylesheet" type="text/css" href="../css/our.css" />
 	<script type="text/javascript">
 		(function (deviceWidth, fontSize) {
@@ -38,23 +39,10 @@
 <body>
 	<div class="wrapper">
 		<div class="content">
-			<dl class="head" style="display: block;">
+			<dl class="user" style="display: block;">
 				<dt><img src="../img/tu.jpg"></dt>
 				<dd class='userInfo'>点击此处登录/注册</dd>
 			</dl>
-			<div class="header" style="display: none;">
-				<div class="head_con">
-					<div class="head_fl"><img src="../img/tu.jpg"></div>
-					<div class="head_cc">
-						<p>昵称昵称</p>
-						<div class="headc_font">
-							<span>22</span>
-							<div class="lines"> </div><a>24天</a>
-						</div>
-					</div>
-					<div class="head_rt"><img src="../img/our_gen.png"></div>
-				</div>
-			</div>
 			<div class="wrapped">
 				<li class="order">已购课程</li>
 				<div class="bor"></div>
