点击方法封装

--- a/index/index.html
+++ b/index/index.html
@@ -46,26 +46,7 @@
 	<div class="wrapper">
 		<div class="content">
 			<!-- 直播推荐 -->
-			<div class="banner">
-				<!-- <div class="ban_tit">
-					本周直播推荐
-				</div>
-				<div class="ban_tu">
-					<img src="../img/tu.jpg" />
-					<div class="ban_shi jijiang">即将开始</div>
-				</div>
-				<div class="ban_zi clear">
-					<a class="ban_zia">教你如何走进世界银行</a>
-					<a class="ban_zib">08-23 19:00</a>
-				</div>
-				<div class="ban_sp">
-					<strong>讲师名</strong>
-					<span>套课：5课时</span>
-					<p>
-						<a class="small">¥</a>0</p>
-				</div>
-				<div class="ban_bao">1000人已报名</div> -->
-			</div>
+			<div class="banner"></div>
 
 			<!-- 限时免费公开课 -->
 			<div class="gao">
