--- a/index/mall.html
+++ b/index/mall.html
@@ -33,7 +33,7 @@
 		})(750, 50);
 	</script>
 	<script src="../js/mall.js" type="text/javascript" charset="utf-8"></script>
-	<!-- <script src="../js/public.js"></script> -->
+	<script src="../js/public.js"></script>
 </head>
 
 <body>
