--- a/index/details.html
+++ b/index/details.html
@@ -52,7 +52,7 @@
 						</div>
 						<div class="int_p">讲师名</div>
 						<div class="int_foot">
-							<div class="int_zi"><a class="small">¥</a>6-<a class="small">¥</a>218</div>
+							<div class="int_zi"></div>
 							<div class="int_peo">1000人学习</div>
 						</div>
 					</div>
