--- a/index/sign.html
+++ b/index/sign.html
@@ -47,7 +47,11 @@
 				</div>
 			</div>
 			<div class="sign_cen">
-				<p>添加助教微信，进入学习群，获得更多免费资料！！</p>
+				<p>微信报名</p>
+				<div class="inp">
+					<input type="text" placeholder="请输入微信号" id="inp" />
+					<input type="button" value="立即报名" id="btn" />
+				</div>
 				<div class="sign_img"><img src="../img/erweima.png"></div>
 			</div>
 			<div class="sign_foot">
