--- a/index/boutique.html
+++ b/index/boutique.html
@@ -7,7 +7,7 @@
 	<title>Softline</title>
 	<link rel="stylesheet" type="text/css" href="../css/bout.css" />
 	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script>
+	<script src="../js/bscroll.min.js"></script>
 	<script type="text/javascript">
 		(function (deviceWidth, fontSize) {
             deviceWidth = deviceWidth || 640;
