--- a/index/prespPlay.html
+++ b/index/prespPlay.html
@@ -37,7 +37,8 @@
         })(750, 50);
     </script>
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script>
+    <!-- <script src="https://unpkg.com/better-scroll@1.0.1/dist/bscroll.min.js"></script> -->
+    <script src="../js/bscroll.min.js"></script>
     <script src="../js/prespPlay.js"></script>
     <script src="../js/public.js"></script>
 </head>
@@ -48,23 +49,11 @@
             <!-- 视屏 -->
             <div class="videoWarp">
                 <video src=""></video>
-                <div class="prompt">距离开课还有<span>24</span>分钟</div>
+                <div class="play"></div>
             </div>
             <!-- 讲师 -->
             <div class="teacher_warp">
-                <div class="title">
-                    本期讲师
-                </div>
-                <div class="teacher clear">
-                    <div class="tx">
-                        <img src="../img/tu.jpg" alt="">
-                    </div>
-                    <div class="name">
-                        <h4>Monica</h4>
-                        <span>GRE满分选手</span>
-                    </div>
-                    <div class="guanzhu">+关注</div>
-                </div>
+                
             </div>
             <!-- 导航 -->
             <div class="nav">
